--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -13,7 +13,7 @@
             <p class="p10" name="email" type="text" th:text="${username}"></p>
         </div>
         <div class="tb_logout">
-            <a href="/logout">
+            <a class="logoutbtn" href="/logout">
                 <p class="p10">Logout</p>
             </a>
         </div>
