--- a/src/main/resources/templates/edittask.html
+++ b/src/main/resources/templates/edittask.html
@@ -8,32 +8,55 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="/js/taskValidation.js"></script>
     <script src="/js/jquery.validate.js"></script>
+    <script defer src="/js/main.js"></script>
 </head>
 <body>
+<div class="toolbar_tb">
+    <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
+    <div class="tb_user row">
+        <div class="tb_userinfo">
+            <p class="p10" name="email" type="text" th:text="${username}"></p>
+        </div>
+        <div class="tb_logout">
+            <a class="logoutbtn" href="/logout">
+                <p class="p10">Logout</p>
+            </a>
+        </div>
+    </div>
+</div>
+
 <div id="edittaskform" class="modal">
     <form th:action="@{'/edittask/' + ${task.id}}" th:object="${task}" method="post">
-        <div class="modal-content">
-            <div class="modal-header">
-                <a href="/">
-                    <span class="close">&times;</span>
-                </a>
-                <h2>Create new task</h2>
+        <div>
+            <div>
+                <h2>Edit task</h2>
             </div>
-            <div class="modal-body">
+            <div>
                 <p>Task ID: </p><input readonly name="id" th:value="${task.id}"/>
                 <p>Project: </p><input name="project" type="text" th:value="${task.project}"/>
                 <p>Summary: </p><input name="summary" class="summary" type="text" th:value="${task.summary}"/>
-                <p>Assignee: </p><input name="assignee" type="text" th:value="${task.assigneeName}"/>
+                <p>Assignee: </p>
+
+                <form th:action="@{/setAssignee}" th:object="${task}" method="post">
+                    <select name="userId" id="userId">
+                        <option class="user" th:block th:each="user : ${users}" th:value="${user.id}"
+                                th:selected="${user.name==task.assigneeName}">[[${user.name}]]
+                        </option>
+                    </select>
+                    <input name="taskId" th:value="${task.id}" hidden>
+                    <input type="submit" value="Change">
+                </form>
+
                 <p>Description: </p><textarea name="description" class="descr"
                                               th:inline="text">[[${task.description}]]</textarea>
             </div>
-            <div class="modal-footer">
+            <div>
                 <span><input class="submitBtn" type="submit" value="Save"/></span>
+                <a href="javascript:history.back()">Go Back</a>
             </div>
         </div>
     </form>
 
 </div>
-<script src="/js/main.js"></script>
 </body>
 </html>
