--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -8,6 +8,19 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 <body>
+<div class="toolbar_tb">
+    <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
+    <div class="tb_user row">
+        <div class="tb_userinfo">
+            <p class="p10" name="email" type="text" th:text="${username}"></p>
+        </div>
+        <div class="tb_logout">
+            <a class="logoutbtn" href="/logout">
+                <p class="p10">Logout</p>
+            </a>
+        </div>
+    </div>
+</div>
 
 <div>
     <div>
@@ -19,15 +32,7 @@
         <div class="cell"><p>Summary: </p>
             <p name="summary" class="summary" type="text" th:text="${task.summary}"/></div>
         <div class="cell"><p>Assignee: </p>
-            <form th:action="@{/setAssignee}" th:object="${task}" method="post">
-                <select name="userId" id="userId">
-                    <option class="user" th:block th:each="user : ${users}" th:value="${user.id}"
-                            th:selected="${user.name==task.assigneeName}">[[${user.name}]]
-                    </option>
-                </select>
-                <input name="taskId" th:value="${task.id}" hidden>
-                <input type="submit">
-            </form>
+
             <p name="assignee" type="text" th:text="${task.assigneeName}"/>
         </div>
         <div class="cell"><p>Description: </p>
