--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -29,6 +29,8 @@
         </div>
         <div class="cell"><p>Project: </p>
             <p name="project" type="text" th:text="${task.project}"/></div>
+        <div class="cell"><p>Status: </p>
+            <p name="status" type="text" th:text="${task.status}"/></div>
         <div class="cell"><p>Summary: </p>
             <p name="summary" class="summary" type="text" th:text="${task.summary}"/></div>
         <div class="cell"><p>Assignee: </p>
