--- a/src/main/resources/templates/taskform.html
+++ b/src/main/resources/templates/taskform.html
@@ -32,6 +32,7 @@
             </div>
             <div class="modal-body">
                 <p>Project: </p><input name="project" th:field="*{project}" type="text"/>
+                <p>Status: </p><input name="status" th:field="*{status}" type="text"/>
                 <p>Summary: </p><input class="summary" name="summary" th:field="*{summary}" type="text"/>
                 <p>Assignee: </p><input name="assignee" th:field="*{assignee}" type="text"/>
                 <p>Description: </p><textarea class="descr" name="description" th:field="*{description}"></textarea>
