Task status added, done

--- a/src/main/resources/templates/edittask.html
+++ b/src/main/resources/templates/edittask.html
@@ -37,8 +37,8 @@
                 <p>Status: </p>
                 <form th:action="@{/edittask/' + ${task.id}}" th:object="${task.status}" method="post">
                     <select name="status" id="status">
-                        <option class="status" th:block th:each="status : ${T(com.app.model.enums.Statuses).values()}" th:value="${status}"
-                                th:selected="${T(com.app.model.enums.Statuses).values()==task.status}">[[${task.status}]]
+                        <option class="status" th:block th:each="status : ${statuses}" th:value="${status}"
+                                th:selected="${status == task.status}">[[${status}]]
                         </option>
                     </select>
                     <input name="taskId" th:value="${task.id}" hidden>
