--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -34,13 +34,13 @@
     font-weight: bold;
 }
 
-a.logoutbtn:link, a:visited {
+a.logoutbtn:link, a.logoutbtn:visited {
   color: black;
   text-decoration: none;
   display: inline-block;
 }
 
-a.logoutbtn:hover, a:active {
+a.logoutbtn:hover, a.logoutbtn:active {
   color: white;
 }
 
@@ -138,6 +138,10 @@ padding-left: 5px;
 
 .project {
   width: 50px;
+}
+
+.status {
+  width: 100px;
 }
 
 .summary {
