status manager done, no validation

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -32,6 +32,12 @@
             <button class="bigbtn">TASKLIST</button>
         </a>
     </div>
+
+    <div id="statusManagerBtn">
+        <a href="/status-manager">
+            <button class="bigbtn">Status manager</button>
+        </a>
+    </div>
 </div>
 <script src="/js/main.js"></script>
 </body>
