--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -38,6 +38,12 @@
             <button class="bigbtn">Status manager</button>
         </a>
     </div>
+
+    <div id="kanbanBoardBtn">
+        <a href="/kanban-board">
+            <button class="bigbtn">Kanban board</button>
+        </a>
+    </div>
 </div>
 <script src="/js/main.js"></script>
 </body>
