--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -172,4 +172,13 @@ width: 300px;
 .board_space {
     display: flex;
     justify-content: space-evenly;
+    inline-size: max-content;
+    overflow: auto;
+    white-space: nowrap;
     }
+
+.taskblock {
+    margin: 12px;
+    padding: 5px;
+    border-style: outset;
+}
