--- a/src/main/resources/templates/kanban-board.html
+++ b/src/main/resources/templates/kanban-board.html
@@ -11,6 +11,11 @@
 <body>
 <div class="toolbar_tb" id="toolbar_tb">
     <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
+    <div>
+        <a class="tb_menubtn" href="/menu">
+            <p class="p10">Menu</p>
+        </a>
+    </div>
     <div class="tb_user row">
         <div class="tb_userinfo">
             <p class="p10" name="email" type="text" th:text="${username}"></p>
@@ -24,20 +29,20 @@
 </div>
 
 <div class="board_space row">
-    <th:block th:each="status : ${statuslist}">
+    <div class="kanban_col" th:each="status : ${statuslist}">
         <div>
             <div class="header" th:text="${status.status}"></div>
             <div th:block th:each="statusWithTasks : ${tasksByStatus.values()}">
                 <div th:each="task : ${statusWithTasks}">
                     <div class="taskblock" th:if="${status.status} == ${task.status}">
-                        <div class="taskId" th:text="${task.id}"></div>
-                        <div class="taskName" th:text="${task.project}"></div>
-                        <div class="description" th:text="${task.summary}"></div>
-                        <div class="description" th:text="${task.status}"></div>
+                        <div class="textblock" th:text="${task.id}"></div>
+                        <div class="textblock" th:text="${task.project}"></div>
+                        <div class="textblock" th:text="${task.summary}"></div>
+<!--                        <div class="textblock" th:text="${task.status}"></div>-->
                     </div>
                 </div>
             </div>
         </div>
-    </th:block>
+    </div>
 </div>
 </body>
