--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -7,6 +7,24 @@
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
+<div class="toolbar_tb">
+    <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
+    <div>
+        <a class="tb_menubtn" href="/menu">
+            <p class="p10">Menu</p>
+        </a>
+    </div>
+    <div class="tb_user row">
+        <div class="tb_userinfo">
+            <p class="p10" name="email" type="text" th:text="${username}"></p>
+        </div>
+        <div class="tb_logout">
+            <a class="logoutbtn" href="/logout">
+                <p class="p10">Logout</p>
+            </a>
+        </div>
+    </div>
+</div>
 <h1>Success!</h1>
 <a href="/menu">
     <img src="/img/ok.png" style="width:360px;height:200px;">
