--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,11 +6,14 @@
 .toolbar_tb {
     display: flex;
     justify-content: space-between;
+    position: relative;
+    top: 0;
     background-color: #1d74c7;
     border-radius: 3px;
     font-size: 25px;
     padding: 5px;
-    margin-bottom: 15px;
+    margin: 5px 10px 10px 10px;
+    width: -webkit-fill-available;
 }
 
 .tb_logo {
