--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,7 +6,7 @@
 .toolbar_tb {
     display: flex;
     justify-content: space-between;
-    position: relative;
+    position: fixed;
     top: 0;
     background-color: #1d74c7;
     border-radius: 3px;
@@ -14,6 +14,10 @@
     padding: 5px;
     margin: 5px 10px 10px 10px;
     width: -webkit-fill-available;
+}
+
+body {
+    padding-top: 70px;
 }
 
 .tb_logo {
