edit comments in progress

--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -45,19 +45,25 @@
         <div class="cell"><p>Description: </p>
             <p name="description" class="descr" th:text="${task.description}"></p></div>
 
-        <div class="cell"><p>Comments: </p>
-            <p name="Comment" class="comment" th:text="${comments}"></p>
+        <fieldset>
+            <legend>Comments: </legend>
+            <p name="comment" class="comment" th:text="${comments}"></p>
             <div class="taskComments">
                 <th:block th:each="comment : ${commentList}">
                     <div class="commentBlock cell">
                         <p>Written by: </p><div th:text="${comment.user}"></div>
                         <p>Comment: </p><div th:text="${comment.comment}"></div>
                         <p>Created: </p><div th:text="${comment.created}"></div>
-                        <p>Modified: </p><div th:text="${comment.modified}"></div>
+<!--                        <p>Modified: </p><div th:text="${comment.modified}"></div>-->
                     </div>
                 </th:block>
             </div>
-        </div>
+            <div>
+                <a th:href="'/newComment/' + ${task.id}">
+                    <button>Comment</button>
+                </a>
+            </div>
+        </fieldset>
     </div>
 
 
