Comment count not finished, task list done, kanban left

--- a/src/main/resources/templates/kanban-board.html
+++ b/src/main/resources/templates/kanban-board.html
@@ -38,6 +38,7 @@
                     <div class="textblock" th:text="${task.project}"></div>
                     <div class="textblock" th:text="${task.summary}"></div>
                     <div class="textblock" th:text="${task.status}"></div>
+                    <div class="textblock" th:text="${task.commentsCount}"></div>
                 </div>
             </th:block>
         </div>
