--- a/src/main/resources/templates/taskform.html
+++ b/src/main/resources/templates/taskform.html
@@ -37,9 +37,14 @@
             </div>
             <div class="modal-body">
                 <p>Project: </p><input name="project" th:field="*{project}" type="text"/>
-                <p>Status: </p><input name="status" th:field="*{status}" type="text"/>
                 <p>Summary: </p><input class="summary" name="summary" th:field="*{summary}" type="text"/>
-                <p>Assignee: </p><input name="assignee" th:field="*{assignee}" type="text"/>
+                <p>Assignee: </p>
+                <form>
+                    <select name="assignee" id="userId">
+                        <option class="user" th:block th:each="user : ${users}" th:value="${user.id}">[[${user.name}]]
+                        </option>
+                    </select>
+                </form>
                 <p>Description: </p><textarea class="descr" name="description" th:field="*{description}"></textarea>
             </div>
             <div>
