--- a/src/main/resources/templates/edittask.html
+++ b/src/main/resources/templates/edittask.html
@@ -46,17 +46,13 @@
                 </form>
                 <p>Summary: </p><input name="summary" class="summary" type="text" th:value="${task.summary}"/>
                 <p>Assignee: </p>
-
-                <form th:action="@{/setAssignee}" th:object="${task}" method="post">
-                    <select name="userId" id="userId">
-                        <option class="user" th:block th:each="user : ${users}" th:value="${user.id}"
-                                th:selected="${user.id==task.assignee}">[[${user.name}]]
-                        </option>
-                    </select>
-                    <input name="taskId" th:value="${task.id}" hidden>
-                    <input type="submit" value="Change">
-                </form>
-
+                <select name="assignee" id="userId">
+                    <option class="user" th:block th:each="user : ${users}" th:value="${user.id}"
+                            th:selected="${user.id==task.assignee}">[[${user.name}]]
+                    </option>
+                </select>
+                <input name="taskId" th:value="${task.id}" hidden>
+                <input type="submit" value="Change">
                 <p>Description: </p><textarea name="description" class="descr"
                                               th:inline="text">[[${task.description}]]</textarea>
             </div>
