task history. no UI

--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -94,6 +94,9 @@
         <a th:href="'/edittask/' + ${task.id}">
             <button class="submitBtn">Edit</button>
         </a>
+        <a th:href="'/task-history/' + ${task.id}">
+            <button class="submitBtn">History</button>
+        </a>
     </div>
 </div>
 </body>
