--- a/src/main/resources/templates/task-history.html
+++ b/src/main/resources/templates/task-history.html
@@ -37,6 +37,8 @@
                 <div th:text="${record.summary}"></div>
                 <div th:text="${record.assignee}"></div>
                 <div th:text="${record.description}"></div>
+                <div th:text="${record.startDate}"></div>
+                <div th:text="${record.dueDate}"></div>
             </div>
         </th:block>
     </div>
@@ -47,6 +49,8 @@
                 <div th:text="${record.summary}"></div>
                 <div th:text="${record.assignee}"></div>
                 <div th:text="${record.description}"></div>
+                <div th:text="${record.startDate}"></div>
+                <div th:text="${record.dueDate}"></div>
             </div>
         </th:block>
     </div>
