--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -30,26 +30,39 @@
 
 <div>
     <div>
-        <div class="cell"><p>Task ID: </p>
-            <div name="id" th:text="${task.id}"></div>
+        <div class="cell">
+            <div class="row">
+                <div class="right_200">
+                    <p class="label">Task ID: </p>
+                    <div name="id" th:text="${task.id}"></div>
+                </div>
+                <div class="right_200">
+                    <p class="label">Start date: </p>
+                    <div name="startDate" th:text="${task.startDate}"></div>
+                </div>
+                <div class="right_200">
+                    <p class="label">Due date: </p>
+                    <div name="dueDate" th:text="${task.dueDate}"></div>
+                </div>
+            </div>
         </div>
-        <div class="cell"><p>Project: </p>
+        <div class="cell"><p class="label">Project: </p>
             <p name="project" type="text" th:text="${task.project}"/></div>
-        <div class="cell"><p>Status: </p>
+        <div class="cell"><p class="label">Status: </p>
             <p name="status" type="text" th:text="${task.status}"/></div>
-        <div class="cell"><p>Reporter: </p>
+        <div class="cell"><p class="label">Reporter: </p>
             <th:block th:each="user : ${users}" th:value="${user.id}">
                 <th:block th:if="${user.id==task.reporter}">[[${user.name}]]</th:block>
             </th:block>
         </div>
-        <div class="cell"><p>Summary: </p>
+        <div class="cell"><p class="label">Summary: </p>
             <p name="summary" class="summary" type="text" th:text="${task.summary}"/></div>
-        <div class="cell"><p>Assignee: </p>
+        <div class="cell"><p class="label">Assignee: </p>
             <th:block th:each="user : ${users}" th:value="${user.id}">
                 <th:block th:if="${user.id==task.assignee}">[[${user.name}]]</th:block>
             </th:block>
         </div>
-        <div class="cell"><p>Description: </p>
+        <div class="cell"><p class="label">Description: </p>
             <p name="description" class="descr" th:text="${task.description}"></p></div>
 
         <fieldset>
