--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -44,6 +44,12 @@
             <button class="bigbtn">Kanban board</button>
         </a>
     </div>
+
+    <div id="sprintManagerBtn">
+        <a href="/sprint">
+            <button class="bigbtn">Sprints</button>
+        </a>
+    </div>
 </div>
 <script src="/js/main.js"></script>
 </body>
