--- a/src/main/resources/templates/sprint.html
+++ b/src/main/resources/templates/sprint.html
@@ -23,10 +23,40 @@
     </div>
 </div>
 
-<div name="sprintBoard">
-    <div name="sprint_menu"></div>
-    <div name="sprint_info"></div>
-    <div name="sprint_tasks"></div>
+<div class="sprintBoard">
+    <div class="sprint_menu">
+<!--        <form th:action="@{'/sprint/' + ${sprintId}" th:object="${sprint}" method="post" id="showSprint">-->
+            <p class="sprintMenuItem">Sprint: </p>
+            <select class="sprintMenuItem sprintSelector" name="sprint" id="sprintId">
+                <option th:block th:each="sprint : ${sprintList}" th:value="${sprint.id}">
+                    [[${sprint.name}]]
+                </option>
+            </select>
+            <input type="submit" id="showSprintBtn" value="Show">
+            <button id="newSprintBtn" class="sprintMenuItem">New sprint</button>
+<!--        </form>-->
+    </div>
+
+    <div name="sprint_info">
+        <div class="textblock" th:text="${sprint.id}"></div>
+        <div class="textblock" th:text="${sprint.name}"></div>
+        <div class="textblock" th:text="${sprint.startDate}"></div>
+        <div class="textblock" th:text="${sprint.endDate}"></div>
+        <div class="textblock" th:text="${sprint.description}"></div>
+        <div class="textblock" th:text="${sprint.status}"></div>
+    </div>
+
+    <div name="sprint_tasks">
+        <th:block th:each="task : ${tasklist}">
+            <div class="taskblock">
+                <div class="textblock" th:text="${task.id}"></div>
+                <div class="textblock" th:text="${task.project}"></div>
+                <div class="textblock" th:text="${task.summary}"></div>
+                <div class="textblock" th:text="${task.status}"></div>
+                <div class="textblock" th:text="'Comments: ' + ${task.commentCount}"></div>
+            </div>
+        </th:block>
+    </div>
 </div>
 <div name="createSprint hidden">
     <div name="new_sprint"></div>
